# poetry-say-hello

./: README.md  pyproject.toml
first/scripts/: .say_hello.py.swo  .say_hello.py.swp  say_hello.py
